name:                Game-Go
version:             0.1
synopsis:            Игра «Го» на переменном поле 9x9, 13x13, 19x19.
-- description:
homepage:            https://github.com/cmc-haskell-2017/go
-- license:
-- license-file:
author:              Team: Неуловимые Мстители
maintainer:          Opavlyuchenkov@gmail.com
copyright:           2017
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Game, Config, Draw, Models
  build-depends:       base >= 4.7 && < 5
                       , gloss
                       , containers
  default-language:    Haskell2010

executable Game-Go
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Game-Go
  default-language:    Haskell2010

test-suite my-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Game-Go
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/go
